k8s/application/static-server/components/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-server
  namespace: default
  labels:
    app: static-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-server
  template:
    metadata:
      labels:
        app: static-server
    spec:
      containers:
      - name: static-server
        image: 192.168.0.55:30002/images/static-server:latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: http
            httpHeaders:
            - name: Host
              value: blog.yadon3141.com
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: http
            httpHeaders:
            - name: Host
              value: blog.yadon3141.com
          initialDelaySeconds: 5
          periodSeconds: 10
