k8s/application/static-server/components/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-server
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: "blog.yadon3141.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-server
            port:
              number: 80
